Add unit 17 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -526,3 +526,42 @@
     pf: πεηύλαχα
     pm: πεξύλαγμαι
     ap: ἐφυλάχθην
+-
+  name: Unit 17
+  unit: 17
+  pp:
+  -
+    pr: διαφέρω
+    fu: διοίσω
+    ao: διήνεγκον or διήνεγκα
+    pf: διενήνοχα
+    pm: διενήνεγμαι
+    ap: διηνέχθην
+  -
+    pr: εὔχομαι
+    fu: εὔξομαι
+    ao: ηὐξάμην
+    pf: ~
+    pm: ηὖγμαι
+    ap: ~
+  -
+    pr: κατηγορέω
+    fu: κατηγορήσω
+    ao: κατηγόησα
+    pf: κατηγόρκα
+    pm: κατηγόρημαι
+    ap: κατηγορήθην
+  -
+    pr: κρύπτω
+    fu: κρύψω
+    ao: ἔκρυψα
+    pf: ~
+    pm: κέκρυμμαι
+    ap: ἐκρύφθην
+  -
+    pr: -πλήττω
+    fu: -πλήξω
+    ao: -έπληξα
+    pf: πέπληγα
+    pm: πέπληγμαι
+    ap: ἐπλήγην or -επλάγην
