Fix a couple of typos in vocab.yml.

--- a/vocab.yml
+++ b/vocab.yml
@@ -1678,7 +1678,7 @@
     pos: v
   -
     gr: νομίζω
-    en: have as a custom; acknowledge, consder as; believe, think (+ inf. of indirect discourse)
+    en: have as a custom; acknowledge, consider as; believe, think (+ inf. of indirect discourse)
     cog: numismatics
     pos: v
   -
@@ -1717,7 +1717,6 @@
     gr: εἶπον
     gr_ext: (stem εἰπ-)
     en: (aorist) said
-    cog: optics
     pos: v
   -
     gr: ἐλπίζω
@@ -1746,7 +1745,7 @@
     pos: conj
   -
     gr: πάνυ
-    en: very, exceedingly; altogther
+    en: very, exceedingly; altogether
     pos: adv
   -
     gr: πολλάκις
