Add units 18 and 19 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -565,3 +565,81 @@
     pf: πέπληγα
     pm: πέπληγμαι
     ap: ἐπλήγην or -επλάγην
+-
+  name: Unit 18
+  unit: 18
+  pp:
+  -
+    pr: καλέω
+    fu: καλέω
+    ao: ἐκάλεσα
+    pf: κέκληκα
+    pm: κέκλημαι
+    ap: ἐκλήθην
+  -
+    pr: μανθάνω
+    fu: μαθήσομαι
+    ao: ἔμαθον
+    pf: μεμάθηκα
+    pm: ~
+    ap: ~
+  -
+    pr: μέλλω
+    fu: μελλήσω
+    ao: ἐμέλλησα
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: νομίζω
+    fu: νομιέω
+    ao: ἐνόμισα
+    pf: νενόμικα
+    pm: νενόμισμαι
+    ap: ἐνομίσθην
+  -
+    pr: πίπτω
+    fu: πεσέομαι
+    ao: ἔπεσον
+    pf: πέπτωκα
+    pm: ~
+    ap: ~
+-
+  name: Unit 19
+  unit: 19
+  pp:
+  -
+    pr: ἀγγέλλω
+    fu: ἀγγελέω
+    ao: ἤγγειλα
+    pf: ἤγγελκα
+    pm: ἤγγελμαι
+    ap: ἠγγέλθην
+  -
+    pr: γιγνώσκω
+    fu: γνώσομαι
+    ao: ἔγνων
+    pf: ἔγνωκα
+    pm: ἔγνωσμαι
+    ap: ἐγνώσθην
+  -
+    pr: ὁράω
+    fu: ὄψομαι
+    ao: εἶδον (stem ἰδ-)
+    pf: ἑώρακα or ἑόρακα
+    pm: ἑώραμαι or ὦμμαι
+    ap: ὤφθην
+  -
+    pr: ~
+    fu: ἐρέω
+    ao: εἶπον (stem εἰπ-)
+    pf: εἴρηκα
+    pm: εἴρημαι
+    ap: ἐρρήθην
+  -
+    pr: ἐλπίζω
+    fu: ἐλπιέω
+    ao: ἤλπισα
+    pf: ~
+    pm: ~
+    ap: ἠλπίσθην
