Add unit 20 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -643,3 +643,14 @@
     pf: ~
     pm: ~
     ap: ἠλπίσθην
+-
+  name: Unit 20
+  unit: 20
+  pp:
+  -
+    pr: φημί
+    fu: φήσω
+    ao: ἔφησα
+    pf: ῀
+    pm: ῀
+    ap: ῀
