Add unit 23 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -654,3 +654,189 @@
     pf: ῀
     pm: ῀
     ap: ῀
+-
+  name: Unit 23
+  unit: 23
+  pp:
+  -
+    pr: δίδωμι
+    fu: δώσω
+    ao: ἔδωκα
+    pf: δέδωκα
+    pm: δέδομαι
+    ap: ἐδόθην
+  -
+    pr: ἀποδίδωμι
+    fu: ἀποδώσω
+    ao: ἀπέδωκα
+    pf: ἀποδέδωκα
+    pm: ἀποδέδομαι
+    ap: ἀπεδόθην
+  -
+    pr: μεταδίδωμι
+    fu: μεταδώσω
+    ao: μετέδωκα
+    pf: μεταδέδωκα
+    pm: μεταδέδομαι
+    ap: μετεδόθην
+  -
+    pr: παραδίδωμι
+    fu: παραδώσω
+    ao: παρέδωκα
+    pf: παραδέδωκα
+    pm: παραδέδομαι
+    ap: παρεδόθην
+  -
+    pr: προδίδωμι
+    fu: προδώσω
+    ao: προέδωκα
+    pf: προδέδωκα
+    pm: προδέδομαι
+    ap: προεδόθην
+  -
+    pr: ἵημι
+    fu: ἥσω
+    ao: -ἧκα
+    pf: -εἷκα
+    pm: -εἷμαι
+    ap: -εἷθην
+  -
+    pr: ἀφίημι
+    fu: ἀφήσω
+    ao: ἀφῆκα
+    pf: ἀφεῖκα
+    pm: ἀφεῖμαι
+    ap: ἀφείθην
+  -
+    pr: ἐφίημι
+    fu: ἐφήσω
+    ao: ἐφῆκα
+    pf: ἐφεῖκα
+    pm: ἐφεῖμαι
+    ap: ἐφείθην
+  -
+    pr: προσίημι
+    fu: προσήσω
+    ao: προσῆκα
+    pf: προσεῖκα
+    pm: προσεῖμαι
+    ap: προσείθην
+  -
+    pr: ἵστημι
+    fu: στήσω
+    ao: ἔστησα and ἔστην
+    pf: ἕστηκα
+    pm: ἕσταμαι
+    ap: ἐστάθην
+  -
+    pr: ἀφίστημι
+    fu: ἀποστήσω
+    ao: ἀπέστησα and ἀπέστην
+    pf: ἀφέστηκα
+    pm: ἀφέσταμαι
+    ap: ἀπἐστάθην
+  -
+    pr: ἐφίστημι
+    fu: ἐπιστήσω
+    ao: ἐπέστησα and ἐπέστην
+    pf: ἐφέστηκα
+    pm: ἐφέσταμαι
+    ap: ἐπεστάθην
+  -
+    pr: καθίστημι
+    fu: καταστήσω
+    ao: κατέστησα and κατέστην
+    pf: καθέστηκα
+    pm: καθέσταμαι
+    ap: κατεστάθην
+  -
+    pr: τίθημι
+    fu: θήσω
+    ao: ἔθηκα
+    pf: τέθηκα
+    pm: τέθειμαι
+    ap: ἐτέθην
+  -
+    pr: ἀνατίθημι
+    fu: ἀναθήσω
+    ao: ἀνέθηκα
+    pf: ἀνατέθηκα
+    pm: ἀνατέθειμαι
+    ap: ἀνετέθην
+  -
+    pr: ἐπιτίθημι
+    fu: ἐπιθήσω
+    ao: ἐπέθηκα
+    pf: ἐπιτέθηκα
+    pm: ἐπιτέθειμαι
+    ap: ἐπετέθην
+  -
+    pr: κατατίθημι
+    fu: καταθήσω
+    ao: κατέθηκα
+    pf: κατατέθηκα
+    pm: κατατέθειμαι
+    ap: κατετέθην
+  -
+    pr: συντίθημι
+    fu: συνθήσω
+    ao: συνέθηκα
+    pf: συντέθηκα
+    pm: συντέθειμαι
+    ap: συνετέθην
+  -
+    pr: δείκνυμι
+    fu: δείξω
+    ao: ἔδειξα
+    pf: δέδειχα
+    pm: δέδειγμαι
+    ap: ἐδείχθην
+  -
+    pr: ἀποδείκνυμι
+    fu: ἀποδείξω
+    ao: ἀπέδειξα
+    pf: ἀποδέδειχα
+    pm: ἀποδέδειγμαι
+    ap: ἀπεδείχθην
+  -
+    pr: ἐπιδείκνυμι
+    fu: ἐπιδείξω
+    ao: ἐπέδειξα
+    pf: ἐπιδέδειχα
+    pm: ἐπιδέδειγμαι
+    ap: ἐπεδείχθην
+  -
+    pr: ζεύγνυμι
+    fu: ζεύξω
+    ao: ἔζευξα
+    pf: ῀
+    pm: ἔζευγμαι
+    ap: ἐζύγην or ἐζεύχθην
+  -
+    pr: ῥήγνυμι
+    fu: ῥηξω
+    ao: ἔρρηξα
+    pf: -έρρωγα
+    pm: ῀
+    ap: ἐρράγην
+  -
+    pr: εἶμι or ἔρχομαι
+    fu: εἶμι or ἐλεύσομαι
+    ao: ἦλθον
+    pf: ἐλήλυθα
+    pm: ῀
+    ap: ῀
+  -
+    pr: ἄπειμι or ἀπέρχομαι
+    fu: ἄπειμι or ἀπελεύσομαι
+    ao: ἀπῆλθον
+    pf: ἀπελήλυθα
+    pm: ῀
+    ap: ῀
+  -
+    pr: ἔξειμι or ἐξέρχομαι
+    fu: ἔξειμι or ἐξελεύσομαι
+    ao: ἐξῆλθον
+    pf: ἐξελήλυθα
+    pm: ῀
+    ap: ῀
