Reorganise Rakefile; add correction to pp.yml.

--- a/pp.yml
+++ b/pp.yml
@@ -116,7 +116,7 @@
     ap: ἠψέχθην
   -
     pr: φεύγω
-    fu: φεύξομαι or ηευξέομαι
+    fu: φεύξομαι or φευξέομαι
     ao: ἔφυγον
     pf: πέξευγα
     pm: ~
