Tweak ἄπειμι (ἀπο + εἰμί) in vocab.yml.

--- a/vocab.yml
+++ b/vocab.yml
@@ -2611,6 +2611,7 @@
     pos: v
   -
     gr: ἄπειμι
+    gr_ext: (ἀπο + εἰμί)
     id: ἄπειμι-εἰμί
     en: be away, be distant, be absent
     pos: v
