Tweak ὡς handling in vocab.yml.

--- a/vocab.yml
+++ b/vocab.yml
@@ -2586,6 +2586,7 @@
     pos: adv
   -
     gr: ὡς
+    gr_ext: (with part.)
     id: ὡς+part
     en: (with participle, marking causal or purposive meaning) as, as if, in the belief that, on the ground that
     pos: adv
