Add unit 24 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -840,3 +840,91 @@
     pf: ἐξελήλυθα
     pm: ῀
     ap: ῀
+-
+  name: Unit 24
+  unit: 24
+  pp:
+  -
+    pr: ἁλίσκομαι
+    fu: ἁλώσομαι
+    ao: ἑάλων or ἥλων
+    pf: ἑάλωκα or ἥλωκα
+    pm: -
+    ap: -
+  -
+    pr: βαίνω
+    fu: -βήσομαι
+    ao: -ἔβην
+    pf: βέβηκα
+    pm: -βέβαμαι
+    ap: -εβάθην
+  -
+    pr: ἀναβαίνω
+    fu: ἀναβήσομαι
+    ao: ἀνέβην
+    pf: ἀναβέβηκα
+    pm: ἀναβέβαμαι
+    ap: ἀνεβάθην
+  -
+    pr: διαβαίνω
+    fu: διαβήσομαι
+    ao: διέβην
+    pf: διαβέβηκα
+    pm: διαβέβαμαι
+    ap: διεβάθην
+  -
+    pr: καταβαίνω
+    fu: καταβήσομαι
+    ao: καταέβην
+    pf: καταβέβηκα
+    pm: -
+    ap: -
+  -
+    pr: παραβαίνω
+    fu: παραβήσομαι
+    ao: παρέβην
+    pf: παραβέβηκα
+    pm: παραβέβαμαι
+    ap: παρεβάθην
+  -
+    pr: συμβαίνω
+    fu: συμβήσομαι
+    ao: συνέβην
+    pf: συμβέβηκα
+    pm: συμβέβαμαι
+    ap: συνεβάθην
+  -
+    pr: ἀναγιγνώσκω
+    fu: ἀναγνώσομαι
+    ao: ἀνέγνων
+    pf: ἀνέγνωκα
+    pm: ἀνέγνωσμαι
+    ap: ἀνεγνώσθην
+  -
+    pr: διαγιγνώσκω
+    fu: διαγνώσομαι
+    ao: διέγνων
+    pf: διέγνωκα
+    pm: διέγνωσμαι
+    ap: διεγνώσθην
+  -
+    pr: δύω or δύνω
+    fu: -δύσω
+    ao: -έδυσα and ἔδυν
+    pf: -δέδυκα
+    pm: -δέδυμαι
+    ap: -εδύθην
+  -
+    pr: ἀποδύω
+    fu: ἀποδύσω
+    ao: ἀπέδυσα and ἀπέδυν
+    pf: ἀποδέδυκα
+    pm: -
+    ap: -
+  -
+    pr: καταδύω
+    fu: καταδύσω
+    ao: κατέδυσα and κατέδυν
+    pf: καταδέδυκα
+    pm: -
+    ap: -
