Add unit 25 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -849,8 +849,8 @@
     fu: ἁλώσομαι
     ao: ἑάλων or ἥλων
     pf: ἑάλωκα or ἥλωκα
-    pm: -
-    ap: -
+    pm: ~
+    ap: ~
   -
     pr: βαίνω
     fu: -βήσομαι
@@ -877,8 +877,8 @@
     fu: καταβήσομαι
     ao: καταέβην
     pf: καταβέβηκα
-    pm: -
-    ap: -
+    pm: ~
+    ap: ~
   -
     pr: παραβαίνω
     fu: παραβήσομαι
@@ -919,12 +919,30 @@
     fu: ἀποδύσω
     ao: ἀπέδυσα and ἀπέδυν
     pf: ἀποδέδυκα
-    pm: -
-    ap: -
+    pm: ~
+    ap: ~
   -
     pr: καταδύω
     fu: καταδύσω
     ao: κατέδυσα and κατέδυν
     pf: καταδέδυκα
-    pm: -
-    ap: -
+    pm: ~
+    ap: ~
+-
+  name: Unit 25
+  unit: 25
+  pp:
+  -
+    pr: διαδίδωμι
+    fu: διαδώσω
+    ao: διέδωκα
+    pf: διαδέδωκα
+    pm: διαδέδομαι
+    ap: διεδόθην
+  -
+    pr: δύναμαι
+    fu: δυνήσομαι
+    ao: ~
+    pf: ~
+    pm: δεδύνημαι
+    ap: ἐδυνήθην
