Add unit 26 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -946,3 +946,70 @@
     pf: ~
     pm: δεδύνημαι
     ap: ἐδυνήθην
+-
+  name: Unit 26
+  unit: 26
+  pp:
+  -
+    pr: ἁρπάζω
+    fu: ἁρπάσομαι
+    ao: ἥρπασα
+    pf: ἥρπακα
+    pm: ἥρπασμαι
+    ap: ἡρπάσθην
+  -
+    pr: ἐσθίω
+    fu: ἔδομαι
+    ao: ἔφαγον
+    pf: ἐδήδοκα
+    pm: -εδήδεσμαι
+    ap: ἠδέσθην
+  -
+    pr: καίω or κάω
+    fu: καύσω
+    ao: ἔκαυσα
+    pf: -κέκαυκα
+    pm: κέκαυμαι
+    ap: ἐκαύθην
+  -
+    pr: κρίνω
+    fu: κρινέω
+    ao: ἔκρινα
+    pf: κέκρικα
+    pm: κέκριμαι
+    ap: ἐκρίθην
+  -
+    pr: πίνω
+    fu: πίομαι or πιέομαι
+    ao: ἔπιον
+    pf: πέπωκα
+    pm: -πέπομαι
+    ap: -επόθην
+  -
+    pr: στρέφω
+    fu: στρέψω
+    ao: ἔστρεψα
+    pf: ~
+    pm: ἔστραμμαι
+    ap: ἐστρέφθην or ἐστράφην
+  -
+    pr: τέμνω
+    fu: τεμέω
+    ao: ἔτεμον (ἔταμον)
+    pf: -τέτμηκα
+    pm: τέτμημαι
+    ap: ἐτμήθην
+  -
+    pr: τρέφω
+    fu: θρέψω
+    ao: ἔθρεψα
+    pf: τέτροφα
+    pm: τέθραμμαι
+    ap: ἐτράφην (ἐτρέφθην)
+  -
+    pr: ὑπισχνέομαι
+    fu: ὑποσχήσομαι
+    ao: ὑπεσχόμην
+    pf: ~
+    pm: ὑπέσχημαι
+    ap: ~
