Add unit 27 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -1013,3 +1013,63 @@
     pf: ~
     pm: ὑπέσχημαι
     ap: ~
+-
+  name: Unit 27
+  unit: 27
+  pp:
+  -
+    pr: ἀναιρέω
+    fu: ἀναιρήσω
+    ao: ἀνεῖλον (stem ἀνελ-)
+    pf: ἀνῄρηκα
+    pm: ἀνῄρημαι
+    ap: ἁνῃρέθην
+  -
+    pr: ἄπειμι
+    fu: ἀπέσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: διώκω
+    fu: διώξομαι or (rare) διώξω
+    ao: ἐδίωξα
+    pf: δεδίωχα
+    pm: ~
+    ap: ἐδιώχθην
+  -
+    pr: ἐξαιτέω
+    fu: ἐξαιτήσω
+    ao: ἐξῄτησα
+    pf: ἐξῄτηκα
+    pm: ἐξῄτημαι
+    ap: ἐξῃτήθην
+  -
+    pr: μετέχω
+    fu: μεθέξω or μετασχήσω
+    ao: μετέσχον
+    pf: μετέσχηκα
+    pm: ~
+    ap: ~
+  -
+    pr: ὀρχέομαι
+    fu: ὀρχήσομαι
+    ao: ὠρχησάμην
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: πάρειμι
+    fu: μαρέσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: πολεμέω
+    fu: πολεμήσω
+    ao: ἐπολέμησα
+    pf: πεπολέμηκα
+    pm: πεπολέμημαι
+    ap: ἐπολεμήθην
