Add unit 28 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -1073,3 +1073,133 @@
     pf: πεπολέμηκα
     pm: πεπολέμημαι
     ap: ἐπολεμήθην
+-
+  name: Unit 28
+  unit: 28
+  pp:
+  -
+    pr: ἐπιβουλεύω
+    fu: ἐπιβουλεύσω
+    ao: ἐπεβούλευσα
+    pf: ἐπιβεβούλευκα
+    pm: ἐπιβεβούλευμαι
+    ap: ἐπεβουλεύθην
+  -
+    pr: ἀγνοέω
+    fu: ἀγνοήσω
+    ao: ἠγνόησα
+    pf: ἠγνόηκα
+    pm: ἠγνόημαι
+    ap: ἠγνοήθην
+  -
+    pr: ἁμαρτάνω
+    fu: ἁμαρτήσομαι
+    ao: ἥμαρτον
+    pf: ἡμάρτηκα
+    pm: ἡμάρτημαι
+    ap: ἡμαρτήθην
+  -
+    pr: ἀνέχω
+    fu: ἀνέξω or ἀνασχήσω
+    ao: ἀνέχσον
+    pf: ἀνέσχηκα
+    pm: ~
+    ap: ~
+  -
+    pr: διαμένω
+    fu: διαμενέω
+    ao: διέμεινα
+    pf: διαμεμένηκα
+    pm: ~
+    ap: ~
+  -
+    pr: διατελέω
+    fu: διατελέω
+    ao: διετέλεσα
+    pf: διατετέλεκα
+    pm: διατετέλεσμαι
+    ap: διετελέσθην
+  -
+    pr: ἐλέγχω
+    fu: ἐλέγξω
+    ao: ἤλεγξα
+    pf: ~
+    pm: ἐλήλεγμαι
+    ap: ἠλέγχθην
+  -
+    pr: ἐξελέγχω
+    fu: ἐξελέγξω
+    ao: ἐξηλεγξα
+    pf: ~
+    pm: ἐξελήλεγμαι
+    ap: ἐξηλέγχθην
+  -
+    pr: ἐπίσταμαι
+    fu: ἐπιστήσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ἠπιστήθην
+  -
+    pr: ἥδομαι
+    fu: ἡσθήσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ἥσθην
+  -
+    pr: λανθάνω
+    fu: λήσω
+    ao: ἔλαθον
+    pf: λέληθα
+    pm: -λέλησμαι
+    ap: ~
+  -
+    pr: οἶδα
+    fu: εἴσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: ὀργίζομαι
+    fu: ὀργιέομαι
+    ao: ~
+    pf: ~
+    pm: ὤργισμαι
+    ap: ὠργίσθην
+  -
+    pr: ὀργίζω
+    fu: ~
+    ao: ὤργισα
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: παύω
+    fu: παύσω
+    ao: ἔπαυσα
+    pf: πέπαυκα
+    pm: πέπαυμαι
+    ap: ἐπαύθην
+  -
+    pr: περιοράω
+    fu: περιόψομαι
+    ao: περιεῖδον
+    pf: περιεώρακα
+    pm: περιῶμμαι or περιεώραμαι
+    ap: περιώφθην
+  -
+    pr: τυγχάνω
+    fu: τεύξομαι
+    ao: ἔτυχον
+    pf: τετύχηκα
+    pm: ~
+    ap: ~
+  -
+    pr: φθάνω
+    fu: φθήσομαι
+    ao: ἔφθασα or ἔφθην
+    pf: ~
+    pm: ~
+    ap: ~
