Add unit 29 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -1203,3 +1203,14 @@
     pf: ~
     pm: ~
     ap: ~
+-
+  name: Unit 29
+  unit: 29
+  pp:
+  -
+    pr: φαίνω
+    fu: φανέω
+    ao: ἔφηνα
+    pf: πέφηνα
+    pm: πέφασμαι
+    ap: ἐφάνην (ἐφάνθην)
