Fix a couple of typos in pp.yml.

--- a/pp.yml
+++ b/pp.yml
@@ -332,7 +332,7 @@
   -
     pr: παρακελεύομαι
     fu: παρακελεύσομαι
-    ao: παρκελευσάμην
+    ao: παρεκελευσάμην
     pf: ~
     pm: παρακεκέλευσμαι
     ap: ~
@@ -547,7 +547,7 @@
   -
     pr: κατηγορέω
     fu: κατηγορήσω
-    ao: κατηγόησα
+    ao: κατηγόρησα
     pf: κατηγόρκα
     pm: κατηγόρημαι
     ap: κατηγορήθην
